[fix|front] overflow on register page, navbar not showing up after validating user profile

--- a/front/src/app/pages/login/login.scss
+++ b/front/src/app/pages/login/login.scss
@@ -130,6 +130,7 @@ button {
     position: absolute;
     opacity: 0;
     pointer-events: none;
+    width: 0;
   }
 
   label {
